--- a/src/shopListPage.html
+++ b/src/shopListPage.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Book Shope</title>
+    <title>Page 2</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -22,7 +22,7 @@
   </head>
   <body>
     <load src="./partials/header.html" />
-    <load src="./partials/shop.html" />
-    <script type="module" src="./main.js"></script>
+    <load src="./partials/shoppingList.html" />
+    <script type="module" src="./js/shopeList.js"></script>
   </body>
 </html>
