--- a/src/shopListPage.html
+++ b/src/shopListPage.html
@@ -20,9 +20,10 @@
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body>
+  <body class="light">
     <load src="./partials/header.html" />
     <load src="./partials/shoppingList.html" />
+    <load src="./partials/burgerMobile.html" />
     <script type="module" src="./js/shopeList.js"></script>
   </body>
 </html>
