--- a/src/shopListPage.html
+++ b/src/shopListPage.html
@@ -24,6 +24,7 @@
     <load src="./partials/header.html" />
     <load src="./partials/shoppingList.html" />
     <load src="./partials/burgerMobile.html" />
+    <script type="module" src="./js/charitableFunds.js"></script>
     <script type="module" src="./js/shopeList.js"></script>
   </body>
 </html>
