--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,7 @@
     <load src="./partials/header.html" />
     <load src="./partials/shop.html" />
     <load src="./partials/burgerMobile.html" />
+    <script type="module" src="./js/charitableFunds.js"></script>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
