--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
     <load src="./partials/header.html" />
     <load src="./partials/shop.html" />
     <load src="./partials/burgerMobile.html" />
-    <load src="./partials/skrollButton.html" />
+    <load src="./partials/scrollButton.html" />
     <script type="module" src="./js/scrollButton.js"></script>
     <script type="module" src="./js/charitableFunds.js"></script>
     <script type="module" src="./main.js"></script>
