dark theme update

--- a/src/shopListPage.html
+++ b/src/shopListPage.html
@@ -26,5 +26,6 @@
     <load src="./partials/burgerMobile.html" />
     <script type="module" src="./js/charitableFunds.js"></script>
     <script type="module" src="./js/shopeList.js"></script>
+    <script type="module" src="./js/darkMode.js"></script>
   </body>
 </html>
