--- a/src/index.html
+++ b/src/index.html
@@ -28,5 +28,6 @@
     <script type="module" src="./js/scrollButton.js"></script>
     <script type="module" src="./js/charitableFunds.js"></script>
     <script type="module" src="./main.js"></script>
+    <script type="module" src="./js/darkMode.js"></script>
   </body>
 </html>
