--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
-  <body class="light home">
+  <body class="light home visually-hidden">
     <load src="./partials/header.html" />
     <load src="./partials/shop.html" />
     <load src="./partials/burgerMobile.html" />
