--- a/src/shopListPage.html
+++ b/src/shopListPage.html
@@ -20,7 +20,7 @@
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body class="light shop-list-page">
+  <body class="light shop-list-page visually-hidden">
     <load src="./partials/header.html" />
     <load src="./partials/shoppingList.html" />
     <load src="./partials/burgerMobile.html" />
