--- a/src/shopListPage.html
+++ b/src/shopListPage.html
@@ -29,5 +29,7 @@
     <script type="module" src="./js/shopeList.js"></script>
     <script type="module" src="./js/darkMode.js"></script>
     <script type="module" src="./js/burgerMenu.js"></script>
+    <!-- Не забути видалити -->
+    <script type="module" src="./js/pagination.js"></script>
   </body>
 </html>
