--- a/src/index.html
+++ b/src/index.html
@@ -32,5 +32,6 @@
     <script type="module" src="./main.js"></script>
     <script type="module" src="./js/darkMode.js"></script>
     <script type="module" src="./js/burgerMenu.js"></script>
+    <script type="module" src="./js/restGallary.js"></script>
   </body>
 </html>
