--- a/src/shopListPage.html
+++ b/src/shopListPage.html
@@ -29,5 +29,6 @@
     <script type="module" src="./js/shopeList.js"></script>
     <script type="module" src="./js/darkMode.js"></script>
     <script type="module" src="./js/burgerMenu.js"></script>
+    <script type="module" src="./js/restGallary.js"></script>
   </body>
 </html>
