--- a/src/shopListPage.html
+++ b/src/shopListPage.html
@@ -19,7 +19,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/bookCart.css" />
   </head>
   <body class="light shop-list-page visually-hidden">
     <load src="./partials/header.html" />
