--- a/src/index.html
+++ b/src/index.html
@@ -43,6 +43,7 @@
     <load src="./partials/burgerMobile.html" />
     <load src="./partials/scrollButton.html" />
     <load src="./partials/bookModal.html" />
+    <load src="./partials/loginWindow.html" />
     <script type="module" src="./js/scrollButton.js"></script>
     <script type="module" src="./js/charitableFunds.js"></script>
     <script type="module" src="./main.js"></script>
